k8s.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: apache-d
 labels:
  app: apache2
spec:
 replicas: 2
 selector:
  matchLabels:
   app: casestudy
 template:
  metadata:
   labels:
    app: casestudy
  spec:
   containers:
   - name: apache2
     image: pav537/custom1
     ports:
     - containerPort: 80
---


apiVersion: v1
kind: Service
metadata:
  name: my-apache
spec:
  type: NodePort
  ports:
    - targetPort: 85
      port: 80
  selector:
     app: casestudy
