k8s1.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: apache-d1
 labels:
  app: apache2
spec:
 replicas: 2
 selector:
  matchLabels:
   app: casestudy1
 template:
  metadata:
   labels:
    app: casestudy1
  spec:
   containers:
   - name: apache2
     image: pav537/custom2:latest
     ports:
     - containerPort: 80
---


apiVersion: v1
kind: Service
metadata:
  name: my-apache1
spec:
  type: NodePort
  ports:
    - targetPort: 82
      port: 80
  selector:
     app: casestudy1
