ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /custom
          pathType: Prefix
          backend:
            service:
              name: my-apache
              port:
                number: 80
  - http:
      paths:
        - path: /apache
          pathType: Prefix
          backend:
            service:
              name: my-apache1
              port:
                number: 80
